# cpp-raytracer

./: .clang-format  .gitignore  CMakeLists.txt  README.md  four_color_image.cpp  main.cpp
.cache/clangd/index/: camera.cpp.012CE4D05EB533D7.idx  camera.hpp.E903F806CCD5B6AA.idx  colors.hpp.E2284F895EC112B5.idx  commons.hpp.28C781BB4FFC7AF2.idx  image.cpp.30254E930EDA076F.idx  image.hpp.AA1D7B40F113F2E1.idx  linalg.h.16F715FCFC3FCB46.idx  main.cpp.D9AD0ABA0A9A8339.idx  material.cpp.D1628D1CCDF680D6.idx  material.hpp.01A9B71AF5D40878.idx  objects.cpp.8EB17A6448AF01A1.idx  objects.hpp.3AB0D25BCB91C999.idx  progressbar.cpp.597762E57C0DB6B5.idx  progressbar.hpp.EFDA680D061B7C75.idx  ray.cpp.F2640514789E92B0.idx  ray.hpp.6C924E0A7CADB9F6.idx  scene.cpp.3718A6C87B565051.idx  scene.hpp.6C0CBF4A7E17D22E.idx  stb_image_write.h.2565F7143E8BEB3A.idx
extras/: Makefile  four_color_image.cpp
src/: camera.cpp  camera.hpp  colors.h  colors.hpp  commons.h  commons.hpp  config.h  frombook.hpp  image.cpp  image.h  image.hpp  main.cpp  material.cpp  material.hpp  objects.cpp  objects.hpp  progressbar.cpp  progressbar.hpp  ray.cpp  ray.h  ray.hpp  raytracer  raytracer.cpp  raytracer.hpp  scene.cpp  scene.hpp  src
